--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,18 @@
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/namoshek/horizon.git"
+        }
+    ],
     "require": {
         "php": "^8.0.2",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
-        "laravel/horizon": "5.9.1",
+        "laravel/horizon": "dev-fix-stopwatch-memory-leak",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7"
     },
