--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
-        "laravel/horizon": "5.9.1",
+        "laravel/horizon": "5.x-dev#69486d5e4fad8b6ee02c97ed0bea39ef241df956",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7"
     },
